cleanup bib authors

--- a/tex/horizontal_self_org.tex
+++ b/tex/horizontal_self_org.tex
@@ -245,7 +245,7 @@ The network architecture is shown in \figref{horizontal_org_arch1}.
 \end{figure}
 
 Each VAE is trained independently to minimise the loss function as described in \eqref{hso_6}.
-Adam \sidecite{Kingma_Ba_2017} is used as an optimisation algorithm with a learning rate of $1\cdot 10^{-3}$, and the mini-batch size is $32$.
+Adam \sidecite{Kingma2015AdamAM} is used as an optimisation algorithm with a learning rate of $1\cdot 10^{-3}$, and the mini-batch size is $32$.
 
 
 \subsection{Predicting bigger Patches}\seclbl{horizontal_self_org_methods_bigger_patches}
