unnecessary library fix

--- a/styles/phdbibliobyphd.sty
+++ b/styles/phdbibliobyphd.sty
@@ -3,7 +3,7 @@
 \ProvidesPackage{styles/phdbibliobyphd}[2020/06/09 valpha-1.0 phdbibliobyphd]
 
 \RequirePackage{etoolbox}   % for programming LaTeX classes
-%\RequirePackage{calc}       % for some math
+\RequirePackage{calc}       % for some math
 %\RequirePackage{marginnote} % provides \marginnote ~ \marginpar
 \RequirePackage{perpage}    % for resetting counters
 \RequirePackage{xkeyval}    % for defining keys
