--- a/styles/phdbyphd.sty
+++ b/styles/phdbyphd.sty
@@ -623,7 +623,8 @@
 \RequirePackage[scaled=.85]{beramono} % Monospace font
 \RequirePackage[scr=rsfso,cal=boondoxo]{mathalfa} % Mathcal from STIX, unslanted a bit
 \RequirePackage{amsfonts} % Mathematical fonts
-%\RequirePackage{amssymb} % Math symbols, including \blacktriangleright, used for bullets
+\let\Bbbk\relax
+\RequirePackage{amssymb} % Math symbols, including \blacktriangleright, used for bullets
 %\fi
 
 %\setstretch{1.10}
