--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage{amsmath}
 \usepackage{textcomp}
 \usepackage{fontawesome}
+
 \usepackage{styles/phdbibliobyphd}
 \addbibresource{main.bib}
 
@@ -198,9 +199,9 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\clearpage
-%\thispagestyle{empty}
-%\null%
+\clearpage
+\thispagestyle{empty}
+\null%
 %\clearpage
 %\includepdf{cover-back.pdf}
 
